--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ nav a.router-link-active {
 }
 
 /* everywhere else */
-* { 
-  font-family: Arial, Helvetica, sans-serif; 
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #55585a;
 }
