--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,6 @@
 Main Component
-<demoBinding [valueModel] = "asdf" (cleanValueModel)="asdf= asdf+'!!!'"></demoBinding>
+<!--<demoBinding #temp [valueModel] = "temp" (cleanValueModel)="valueModel = temp + '!!!!'"></demoBinding>-->
+<div>
+    <p>This hello largeText: {{largeText}}</p>
+    <p>summaryText: {{largeText |summary:5}}</p>
+</div>
