--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@ h2, h3 {
 body { 
   margin: 2em; 
 }
-body, input[text], button { 
-  color: #888; 
-  font-family: Cambria, Georgia; 
+body, input[text], button {
+  color: #000000;
+  font-family: Cambria, Georgia;
+  background-color: #4f4a4a;
 }
 a {
   cursor: pointer;
@@ -139,5 +140,4 @@ nav a.router-link-active {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #55585a;
 }
