--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,3 @@
 Main Component
-<!--<demoBinding #temp [valueModel] = "temp" (cleanValueModel)="valueModel = temp + '!!!!'"></demoBinding>-->
-<div>
-    <p>This hello largeText: {{largeText}}</p>
-    <p>summaryText: {{largeText |summary:5}}</p>
-</div>
+
+<templateForm></templateForm>
