--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,3 @@
 Main Component
-<button>html btn</button>
-<button md-button>material btn</button>
+<button-demo>Loading Button Demo...</button-demo>
+<button md-button>flat</button>
