--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,14 +1,10 @@
-<br/>Please Work<br/>
+App Component Here...
+<!-- <button md-raised-button color="primary">PRIMARY</button>
+<hr>
 <md-card>
-   <md-card-subtitle>{{l}}</md-card-subtitle>
-   <md-card-title>Card with title</md-card-title>   
-   <md-card-content>
-        <p>This is supporting text.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</p>
-   </md-card-content>
-   <md-card-actions>
-        <button md-button>LIKE</button>
-        <button md-button>SHARE</button>
-   </md-card-actions>
+   Basic card.
 </md-card>
+<br/>
+<md-toolbar [color]="myColor">
+  <span>My Application Title</span>
+</md-toolbar> -->
