--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ h2, h3 {
   font-family: Arial, Helvetica, sans-serif;   
   font-weight: lighter;
 }
-body { 
-  margin: 2em; 
+body {
+  background: rgb(36,36,36);
 }
 body, input[text], button {
   color: #000000;
